--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "browserify": "^16.5.0",
+    "check-dependencies": "^1.1.0",
     "ecstatic": "^4.1.4",
     "envify": "^4.1.0",
     "onchange": "^6.1.0",
     "tsify": "^4.0.1",
     "typescript": "^3.7.5",
-    "uglifyify": "^5.0.2"
+    "uglifyify": "^5.0.0"
   },
   "dependencies": {
-    "firebase": "^7.7.0",
+    "firebase": "^10.5.0",
     "named-regexp-groups": "^1.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
